--- a/starter-code/src/app/myhome/myhome.component.html
+++ b/starter-code/src/app/myhome/myhome.component.html
@@ -1,3 +1,11 @@
 <p>
-  myhome works!
+  my-home-component works!
 </p>
+
+<ul>
+  <li *ngFor="let films of this.service.movies">
+  {{films.title}}
+  {{films.id}}
+  <img style="width:20%"[src]="films.poster" alt="images"></li>
+
+</ul>
